--- a/graduate2/blog/templates/blog/base.html
+++ b/graduate2/blog/templates/blog/base.html
@@ -9,7 +9,7 @@
     </head>
     <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-        <nav class="ms-5">
+        <nav class="ms-auto justify-content-end">
             <a class="p-2 btn btn-outline-primary" href="{% url 'blog:default_list' %}">Community</a>
             <a class="p-2 btn btn-outline-primary" href="{% url 'blog:premium_list' %}">Elite</a>
             <a class="p-2 btn btn-outline-primary" href="#">Contacts</a>
