--- a/graduate2/blog/templates/blog/post_form.html
+++ b/graduate2/blog/templates/blog/post_form.html
@@ -1,10 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'blog/base.html' %}
 
-</body>
-</html>
+{% block content %}
+<div class="col-12">
+    <div class="row">
+        <div class="col-4">
+            <div class="card">
+                <div class="card-body">
+                    <form method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        <div class="form-group">
+                            <label for="{{ form.title.id_for_label }}">Заголовок</label><p>
+                            {{ form.title }}
+                            </p>
+                        </div>
+                        <div class="form-group">
+                            <label for="{{ form.description.id_for_label }}">Описание</label><p>
+                            {{ form.description }}
+                            </p>
+                        </div>
+                        <div class="form-group">
+                            <label for="{{ form.image.id_for_label }}">Изображение</label><p>
+                            {{ form.image }}
+                            </p>
+                        </div>
+                        <button type="submit" class="btn btn-success">
+                            {% if post %}
+                            Сохранить
+                            {% else %}
+                            Создать
+                            {% endif %}
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
