update base and list templates

--- a/graduate2/blog/templates/blog/post_list.html
+++ b/graduate2/blog/templates/blog/post_list.html
@@ -1,11 +1,15 @@
 {% extends 'blog/base.html' %}
 
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% block content %}
 
-</body>
-</html>
+<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <p class="lead">Skyfarm.zen - все про зелень</p>
+</div>
+
+
+
+<div class="row text-center">
+
+</div>
+
+{% endblock %}
