--- a/graduate2/blog/templates/blog/base.html
+++ b/graduate2/blog/templates/blog/base.html
@@ -9,10 +9,11 @@
     </head>
     <body>
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
+        <h5 class="my-0 mr-md-auto font-weight-normal">YO</h5>
         <nav class="ms-auto justify-content-end">
-            <a class="p-2 btn btn-outline-primary" href="{% url 'blog:default_list' %}">Community</a>
-            <a class="p-2 btn btn-outline-primary" href="{% url 'blog:premium_list' %}">Elite</a>
-            <a class="p-2 btn btn-outline-primary" href="#">Contacts</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'blog:post_create' %}">Make Opinion</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'blog:default_list' %}">Society</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'blog:premium_list' %}">Community</a>
             {% if user.is_authenticated %}
             <a class="p-2 btn btn-outline-primary" href="#">Log Out</a>
             {% else %}
@@ -46,7 +47,7 @@
                     <h5>Дополнительно</h5>
                     <ul class="list-unstyled text-small">
                         <li><a class="text-muted" href="#">Мы пишем</a></li>
-                        <li><a class="text-muted" href= "#">Обновление пароля</a></li>
+                        <li><a class="text-muted" href="#">Обновление пароля</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
