added CRUD for post

--- a/graduate2/blog/templates/blog/post_list.html
+++ b/graduate2/blog/templates/blog/post_list.html
@@ -3,13 +3,8 @@
 {% block content %}
 
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-    <p class="lead">Skyfarm.zen - все про зелень</p>
+    <p class="lead">Your opinion about everything</p>
 </div>
 
-
-
-<div class="row text-center">
-
-</div>
 
 {% endblock %}
