--- a/graduate2/blog/templates/blog/base.html
+++ b/graduate2/blog/templates/blog/base.html
@@ -34,26 +34,25 @@
                     <small class="d-block mb-3 text-muted">&copy; 2077</small>
                 </div>
                 <div class="col-6 col-md">
-                    <h5>Категории</h5>
+                    <h5>Categories</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Рассылки</a></li>
-                        <li><a class="text-muted" href="#">Телеграм боты</a></li>
-                        <li><a class="text-muted" href="#">Полезные утилиты</a></li>
-                        <li><a class="text-muted" href="#">Веб-приложения</a></li>
-                        <li><a class="text-muted" href="#">Микросервисы</a></li>
+                        <li><a class="text-muted" href="#">Community</a></li>
+                        <li><a class="text-muted" href="#">Community's opinion</a></li>
+                        <li><a class="text-muted" href="#">Society's opinion</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
-                    <h5>Дополнительно</h5>
+                    <h5>Additional</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Мы пишем</a></li>
-                        <li><a class="text-muted" href="#">Обновление пароля</a></li>
+                        <li><a class="text-muted" href="#">Leaders</a></li>
+                        <li><a class="text-muted" href="https://www.youtube.com/">YouTube</a></li>
+                        <li><a class="text-muted" href="https://translate.google.ru/">Google translate</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md">
-                    <h5>О нас</h5>
+                    <h5>About us</h5>
                     <ul class="list-unstyled text-small">
-                        <li><a class="text-muted" href="#">Контакты</a></li>
+                        <li><a class="text-muted" href="#">Contacts</a></li>
                     </ul>
                 </div>
             </div>
