--- a/graduate2/blog/templates/blog/post_form.html
+++ b/graduate2/blog/templates/blog/post_form.html
@@ -3,6 +3,11 @@
 {% block content %}
 <div class="col-12">
     <div class="row">
+        {% if post %}
+        <h1>Edit post</h1>
+        {% else %}
+        <h1>Create post</h1>
+        {% endif %}
         <div class="col-4">
             <div class="card">
                 <div class="card-body">
