login/logout functional complete

--- a/graduate2/blog/templates/blog/base.html
+++ b/graduate2/blog/templates/blog/base.html
@@ -15,9 +15,9 @@
             <a class="p-2 btn btn-outline-primary" href="{% url 'blog:default_list' %}">Society</a>
             <a class="p-2 btn btn-outline-primary" href="{% url 'blog:premium_list' %}">Community</a>
             {% if user.is_authenticated %}
-            <a class="p-2 btn btn-outline-primary" href="#">Log Out</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:logout' %}">Log Out</a>
             {% else %}
-            <a class="p-2 btn btn-outline-primary" href="#">Log In</a>
+            <a class="p-2 btn btn-outline-primary" href="{% url 'users:login' %}">Log In</a>
             <a class="p-2 btn btn-outline-primary" href="{% url 'users:user_register' %}">Registration</a>
             {% endif %}
         </nav>
