--- a/graduate2/blog/templates/blog/post_list.html
+++ b/graduate2/blog/templates/blog/post_list.html
@@ -3,6 +3,13 @@
 
 {% block content %}
 
+<style>
+.fixed-size {
+  width: 200px;
+  height: 200px;
+}
+</style>
+
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <p class="lead">Your opinion about everything</p>
 </div>
@@ -17,7 +24,7 @@
                 <h4 class="my-0 font-weight-normal">{{ post.title }}</h4>
             </div>
             <div class="card-body">
-                <img src="{% mediapath post.image %}" class="post-image" alt="Post Image"/><p>
+                <img src="{% mediapath post.image %}" class="fixed-size"/>
                 <a href="{% url 'blog:post_detail' post.pk %}"
                    class="w-50 btn btn-lg btn-outline-primary">Read</a></p>
                 {% if request.user|is_owner:post %}
