--- a/graduate2/blog/templates/blog/post_list.html
+++ b/graduate2/blog/templates/blog/post_list.html
@@ -24,12 +24,12 @@
                 <h4 class="my-0 font-weight-normal">{{ post.title }}</h4>
             </div>
             <div class="card-body">
-                <img src="{% mediapath post.image %}" class="fixed-size"/>
+                <img src="{% mediapath post.image %}" class="fixed-size"/><p></p>
                 <a href="{% url 'blog:post_detail' post.pk %}"
-                   class="w-50 btn btn-lg btn-outline-primary">Read</a></p>
+                   class="w-50 btn btn-lg btn-outline-primary">Read</a><p></p>
                 {% if request.user|is_owner:post %}
                 <a href="{% url 'blog:post_update' post.pk %}"
-                   class="w-50 btn btn-lg btn-outline-primary">Edit</a>
+                   class="w-50 btn btn-lg btn-outline-primary">Edit</a><p></p>
                 <a href="{% url 'blog:post_delete' post.pk %}"
                    class="w-50 btn btn-lg btn-outline-warning">Delete</a>
                 {% endif %}
